# Examen-Parcial-3-Vinculante-

./: CMakeLists.txt  README.md  main.cpp
ejercicio/: ejercicio.cpp  ejercicio.h
